cmake_minimum_required(VERSION 3.0)

project(cpp_samples)

add_executable(HelloWorld src/HelloWorld.cpp)
add_executable(Tester src/Tester.cpp)
add_executable(Move src/Move.cpp)
add_executable(TemplateDeduction src/TemplateDeduct.cpp)
add_executable(BinSearch src/Algo/BinSearch.cpp)
add_executable(Array src/Algo/Array.cpp)
add_executable(ArraySorting src/Algo/ArraySorting.cpp)